# DRL-Autopilot

./: 3box.world  README.md  install PX4.md  readme.md
SAC-Continuous-Pytorch/: Lorentz_system.py  ReplayBuffer.py  SAC.py  SAC_test.py  SAC_test_1.py  env.py  main_SAC.py  main_SAC_test.py  read_txt.py  rem.txt  test.py
SAC-Continuous-Pytorch/data/: data0.mat  data1.mat
SAC-Continuous-Pytorch/envs/: Stuart_Landau_oscillator.py  env_test.py
SAC-Continuous-Pytorch/model/: sac_actor.pth  sac_actor1.pth  sac_actor2.pth  sac_actor_test.pth  sac_q_critic.pth  sac_q_critic1.pth  sac_q_critic2.pth  sac_q_critic_test.pth
model/: sac_actor.pth  sac_actor_test.pth  sac_q_critic.pth  sac_q_critic_test.pth
plugins/: CMakeLists.txt  common.h  force_plugin.cc  gazebo_wind_plugin.h  wind_plugin.cpp
script/: RSMPC_env.py  apply_wind.py  main_SAC.py  main_TD3.py  readme.md
